Fixed icons on small screens (updates #79)

--- a/sites/all/themes/SKO2013/assets/css/style.css.less
+++ b/sites/all/themes/SKO2013/assets/css/style.css.less
@@ -898,10 +898,12 @@ h3 {
         top: -45px;
         right: 0px;
         margin-right: 80px;
+            @media only all and (max-width: 60em) {
+              margin-right: 10px;
+            }
     }
-    
   }
-  
+
   @media only all and (min-width: 44.5em) {
     #countdown {
       display: block; } }
